--- a/saiIndustries/sai/templates/home.html
+++ b/saiIndustries/sai/templates/home.html
@@ -478,7 +478,7 @@
                     </div>
                 </div>
                 <br>
-                 <div class="row" data-aos="fade-up" data-aos-delay="100">
+                <div class="row" data-aos="fade-up" data-aos-delay="100">
                     <h3>CAPABILITIES</h3>
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-flters">
@@ -501,7 +501,7 @@
                                     <a href="{% static 'sai/img/portfolio/digital1.jpg' %}"
                                        data-gallery="portfolioGallery" class="portfolio-lightbox"
                                        title="Enterprise Resource Planning"><i
-                                       class="bx bx-plus"></i></a>
+                                            class="bx bx-plus"></i></a>
                                     <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
@@ -574,7 +574,8 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                         <div class="portfolio-wrap">
-                            <img src="{% static 'sai/img/portfolio/portfolio-130.jpg' %}" class="img-fluid" alt="" width="800" height="600">
+                            <img src="{% static 'sai/img/portfolio/portfolio-130.jpg' %}" class="img-fluid" alt=""
+                                 width="800" height="600">
                             <div class="portfolio-info">
                                 <h4>SUPERMAX</h4>
                                 <p>MACHINESTATION</p>
@@ -686,7 +687,7 @@
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                         <div class="portfolio-wrap">
-                            <img src="{% static 'sai/img/portfolio/portfolio-19.jpg' %}" class="img-fluid" alt="" >
+                            <img src="{% static 'sai/img/portfolio/portfolio-19.jpg' %}" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Vertical Turning Lathes</h4>
                                 <p>MACHINESTATION</p>
@@ -705,7 +706,7 @@
                             <img src="{% static 'sai/img/portfolio/portfolio-11.jpg' %}" class="img-fluid" alt="">
                             <div class="portfolio-info">
                                 <h4>Doosan HC 400 II </h4>
-                                <p>Horizontal Machining Center    </p>
+                                <p>Horizontal Machining Center </p>
                                 <div class="portfolio-links">
                                     <a href="{% static 'sai/img/portfolio/portfolio-11.jpg' %}"
                                        data-gallery="portfolioGallery" class="portfolio-lightbox"
@@ -833,84 +834,110 @@
                 <h6>We are an experienced and passionate team. Continuous improvement is our culture by endlessly
                     interesting in what is next. Let us face the challenges and celebrate the victory.</h6>
                 <div class="row">
-                <div class="column">
-                    <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
-                      <img src="{% static 'sai/img/TM1.jpg' %}"   style="border:4px solid #1b6b6f; padding:15px;" alt="TM1" height="242" width="322"/>
-                        <img src="{% static 'sai/img/TM6.PNG' %}" style="border:4px solid #1b6b6f; padding:15px;" alt="TM2" height="242" width="322"/>
-                        <img src="{% static 'sai/img/TM3.jpg' %}" style="border:4px solid #1b6b6f; padding:15px;" alt="TM3" height="242" width="322"/>
+                    <div class="column">
+                        <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
+                            <img src="{% static 'sai/img/TM1.jpg' %}" style="border:4px solid #1b6b6f; padding:15px;"
+                                 alt="TM1" height="242" width="322"/>
+                            <img src="{% static 'sai/img/TM6.PNG' %}" style="border:4px solid #1b6b6f; padding:15px;"
+                                 alt="TM2" height="242" width="322"/>
+                            <img src="{% static 'sai/img/TM3.jpg' %}" style="border:4px solid #1b6b6f; padding:15px;"
+                                 alt="TM3" height="242" width="322"/>
+                        </div>
                     </div>
                 </div>
-            </div><br>
-                <h3>Our Leadership</h3>
-                <h5> We seek diverse perspectives and apply Alternative Thinking and New Approaches in our everyday work
-                    life.</h5>
+                <br>
+                <div class="section-title" data-aos="fade-up">
+
+                    <h3>Excellent Factory Management</h3>
+                    <h6>Sai Industries management is congruent with the elements of ISO 9001:2015 international standard.
+                        Building a clean, safe and smart environment makes a better project management</h6>
+                    <div class="row">
+                        <div class="column">
+                            <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
+                                <img src="{% static 'sai/img/manage11.png' %}"
+                                     style="border:4px solid #1b6b6f; padding:15px;" alt="TM1" height="242"
+                                     width="322"/>
+                                <img src="{% static 'sai/img//portfolio/portfolio-11.jpg' %}"
+                                     style="border:4px solid #1b6b6f; padding:15px;" alt="TM2" height="242"
+                                     width="322"/>
+                                <img src="{% static 'sai/img/manage2.jpg' %}"
+                                     style="border:4px solid #1b6b6f; padding:15px;" alt="TM3" height="242"
+                                     width="322"/>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <h3>Our Leadership</h3>
+                    <h5> We seek diverse perspectives and apply Alternative Thinking and New Approaches in our everyday
+                        work
+                        life.</h5>
+                </div>
+
+                <div class="row">
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="member" data-aos="zoom-in">
+                            <div class="member-img">
+                                <img style="border:1px solid black;" src="{% static 'sai/img/team/team-11.jpg' %}"
+                                     class="img-fluid1" alt="" width="280" height="330">
+                                <div class="social">
+                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-facebook"></i></a>
+                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info">
+                                <h4>Shree Ravishankar D. Bhure</h4>
+                                <span>Director</span>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="member" data-aos="zoom-in" data-aos-delay="100">
+                            <div class="member-img">
+                                <img style="border:1px solid black;" src="{% static 'sai/img/team/team-22.jpg' %}"
+                                     class="img-fluid1" alt="" width="280" height="330">
+                                <div class="social">
+                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-facebook"></i></a>
+                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info">
+                                <h4>Shree Santosh R. Barole</h4>
+                                <span>Director</span>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+                        <div class="member" data-aos="zoom-in" data-aos-delay="200">
+                            <div class="member-img">
+                                <img style="border:1px solid black;" src="{% static 'sai/img/team/team-33.jpg' %}"
+                                     class="img-fluid1" alt="" width="280" height="330">
+                                <div class="social">
+                                    <a href=""><i class="bi bi-twitter"></i></a>
+                                    <a href=""><i class="bi bi-facebook"></i></a>
+                                    <a href=""><i class="bi bi-instagram"></i></a>
+                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                </div>
+                            </div>
+                            <div class="member-info">
+                                <h4>Shree Yogesh D Bhure</h4>
+                                <span>Director</span>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
-
-            <div class="row">
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="member" data-aos="zoom-in">
-                        <div class="member-img">
-                            <img style="border:1px solid black;" src="{% static 'sai/img/team/team-11.jpg' %}"
-                                 class="img-fluid1" alt="" width="280" height="330">
-                            <div class="social">
-                                <a href=""><i class="bi bi-twitter"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
-                                <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                        <div class="member-info">
-                            <h4>Shree Ravishankar D. Bhure</h4>
-                            <span>Director</span>
-                            <p></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="member" data-aos="zoom-in" data-aos-delay="100">
-                        <div class="member-img">
-                            <img style="border:1px solid black;" src="{% static 'sai/img/team/team-22.jpg' %}"
-                                 class="img-fluid1" alt="" width="280" height="330">
-                            <div class="social">
-                                <a href=""><i class="bi bi-twitter"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
-                                <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                        <div class="member-info">
-                            <h4>Shree Santosh R. Barole</h4>
-                            <span>Director</span>
-                            <p></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="member" data-aos="zoom-in" data-aos-delay="200">
-                        <div class="member-img">
-                            <img style="border:1px solid black;" src="{% static 'sai/img/team/team-33.jpg' %}"
-                                 class="img-fluid1" alt="" width="280" height="330">
-                            <div class="social">
-                                <a href=""><i class="bi bi-twitter"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
-                                <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                        <div class="member-info">
-                            <h4>Shree Yogesh D Bhure</h4>
-                            <span>Director</span>
-                            <p></p>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
     </section><!-- End Team Section -->
     <section id="certificate" class="contact section-bg">
         <div class="container">
@@ -997,7 +1024,8 @@
                         <div class="form-group mt-3">
                             <textarea class="form-control" name="message" rows="5" placeholder="Message"
                                       required></textarea>
-                        </div><br/>
+                        </div>
+                        <br/>
                         <div class="text-center">
                             <button type="submit">Send Message</button>
                         </div>
